# certipy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
certipy/: __init__.py  certipy.py  command_line.py
certipy/test/: __init__.py  test_certipy.py
